fixed search input on mobile

--- a/public/main.css
+++ b/public/main.css
@@ -72,6 +72,8 @@ div{
     height: 37px;
     padding: 10px;
     border-right: 0px;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
 }
 
 #search-btn {
